--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.12.1",
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
@@ -33,6 +34,7 @@
         "vue-router": "^3.1.6",
         "vue-scrollto": "^2.17.1",
         "vue-top-progress": "^0.7.0",
+        "vue2-google-maps": "^0.10.7",
         "vuetify": "^2.2.17",
         "vuex": "^3.1.3"
     }
