--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "algolia/algoliasearch-client-php": "^2.2",
         "bitfumes/laravel-multiauth": "^4.0",
         "darryldecode/cart": "^4.1",
         "fideloper/proxy": "^4.2",
@@ -16,6 +17,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/helpers": "^1.2",
+        "laravel/scout": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "paypal/rest-api-sdk-php": "*",
