--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "element-ui": "^2.13.0",
         "vue-carousel": "^0.18.0",
         "vue-faq-accordion": "^1.3.0",
+        "vue-instantsearch": "^1.7.0",
         "vue-router": "^3.1.6",
         "vue-scrollto": "^2.17.1",
         "vue-top-progress": "^0.7.0",
