--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/Home.js": "/Home.js",
+    "/Home~details.js": "/Home~details.js",
     "/account.js": "/account.js",
     "/category.js": "/category.js",
     "/checkout.js": "/checkout.js",
